# a2a-framework

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  build.gradle  docker-compose.yml  gradlew  gradlew.bat  settings.gradle
a2a-core/: build.gradle
a2a-core/src/main/java/com/fox/a2a/core/: A2AAgent.java  A2AClient.java  A2AConfig.java  AgentServer.java
a2a-core/src/main/java/com/fox/a2a/core/handler/: MessageHandler.java  TaskHandler.java
a2a-core/src/main/java/com/fox/a2a/core/pubsub/: PubSubSubscriber.java
a2a-demo/: build.gradle
a2a-demo/src/main/java/com/fox/a2a/demo/: AgentADemo.java  AgentBDemo.java
a2a-go-sdk/: README.md  agent.go  client.go  config.go  generate_proto.sh  go.mod  pubsub.go  server.go  types.go  utils.go
a2a-go-sdk/examples/agent_a/: main.go
a2a-go-sdk/examples/agent_b/: main.go
a2a-go-sdk/proto/: README.md
a2a-node-sdk/: package.json  tsconfig.json
a2a-node-sdk/examples/: node-agent-demo.ts
a2a-node-sdk/src/: a2a-agent.ts  a2a-client.ts  a2a-server.ts  grpc-client.ts  index.ts  pubsub-subscriber.ts  types.ts  utils.ts
a2a-proto/: build.gradle
a2a-proto/src/main/proto/: a2a.proto
a2a-python-sdk/: README.md  generate_proto.sh  pyproject.toml
a2a-python-sdk/a2a/: __init__.py  agent.py  client.py  config.py  pubsub.py  server.py  types.py  utils.py
a2a-python-sdk/a2a/proto/: __init__.py
a2a-python-sdk/examples/: agent_a_demo.py  agent_b_demo.py
a2a-registry/: Dockerfile  build.gradle
a2a-registry/src/main/java/com/fox/a2a/registry/: RegistryApplication.java
a2a-registry/src/main/resources/: application.yml
(+32 files in other folders)
